@@ -21,18 +21,7 @@
         therefore shipped with the Swarm distribution.</PARA>
 
   </ABSTRACT>
-
-  <REVHISTORY>
-    <REVISION>
-    
-      <REVNUMBER>1.1</REVNUMBER> 
-      <DATE>1998-05-13</DATE>
-      <AUTHORINITIALS>mgd, alex, lee</AUTHORINITIALS>
-      <REVREMARK>Created new SGML documentation from former HTML
-      docs</REVREMARK>
-    </REVISION>
-  </REVHISTORY>
-
+  &srcrevhistory.sgml
 </BOOKINFO>
 
 <!--
