@@ -1,3 +1,13 @@
+1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* src.ent.in: Add srcrevhistory.sgml.
+
+	* refmeta.sgml: Replace REVHISTORY with &srcrevhistory.sgml.
+
+	* Makefile.am (SUBDIRS): Add tech.
+	(swarm_ChangeLog): Add (empty).
+	(noinst_DATA): Add srcrevhistory.sgml.
+
 1998-06-03  Alex Lancaster  <alex@santafe.edu>
 
 	* Makefile.am (CLEANFILES): Changed hardcoded refbook.rtf to
